# vesselFM

./: .env.exmple  .gitignore  README.md  main.py  pyproject.toml
scripts/: download_topbrain_data.sh  download_vesselfm_weights.sh  prepare_topbrain_finetune_data.py  test_topbrain_inference.sh  test_topbrain_inference_registered.sh  train_topbrain_finetune.sh
vesselfm/seg/: finetune.py  inference.py  inference_registered.py  module.py  train.py
vesselfm/seg/configs/: inference.yaml
