[project]
name = "vesselfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gpustat>=1.1.1",
    "h5py>=3.14.0",
    "huggingface-hub==0.29.1",
    "hydra-core==1.3.2",
    "lightning==2.4.0",
    "matplotlib==3.7.1",
    "monai==1.3.2",
    "nibabel>=5.3.3",
    "numpy==1.26.4",
    "pylibtiff>=0.7.0",
    "python-dotenv>=1.2.1",
    "scikit-image==0.24.0",
    "scikit-learn==1.5.2",
    "simpleitk==2.4.0",
    "tensorboard==2.14.0",
    "tifffile>=2024.8.30",
    "torch==2.5.1",
    "tqdm==4.67.0",
    "wandb==0.18.7",
]
